--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "next": "^12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^7.0.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.4.3",
     "react-dom": "17.0.2",
